--- a/geomelody/geomelody/SoundcloudLibraryViewController.xib
+++ b/geomelody/geomelody/SoundcloudLibraryViewController.xib
@@ -161,6 +161,14 @@
 					<int key="connectionID">23</int>
 				</object>
 				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">librarySelector</string>
+						<reference key="source" ref="372490531"/>
+						<reference key="destination" ref="684008568"/>
+					</object>
+					<int key="connectionID">26</int>
+				</object>
+				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchEventConnection" key="connection">
 						<string key="label">librarySelection:</string>
 						<reference key="source" ref="684008568"/>
@@ -231,7 +239,7 @@
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">25</int>
+			<int key="maxID">26</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes"/>
 		<int key="IBDocument.localizationMode">0</int>
